# muninn

./: .gitignore  CHANGELOG.md  CLAUDE.md  PHASE2_FINAL.md  PHASE2_SUMMARY.md  README.md  SEARCH_FEATURES.md  checksum-Elixir.Muninn.Native.exs  mix.exs
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: advanced_search_demo.exs  comparison_demo.exs  complete_search_demo.exs  fuzzy_search_demo.exs  fuzzy_test_quick.exs  highlighting_demo.exs  prefix_test.exs  query_parser_fuzzy_test.exs  query_parser_fuzzy_test2.exs  range_functions_demo.exs  range_test.exs  search_demo.exs
lib/: muninn.ex
lib/muninn/: application.ex  index.ex  index_reader.ex  index_writer.ex  native.ex  query.ex  schema.ex  search_result.ex  searcher.ex
lib/muninn/schema/: field.ex
native/muninn/: Cargo.toml
native/muninn/.cargo/: config.toml
native/muninn/src/: index.rs  lib.rs  reader.rs  schema.rs  searcher.rs  writer.rs
scripts/: release.sh
test/: muninn_test.exs  test_helper.exs
test/muninn/: field_types_test.exs  fuzzy_search_test.exs  index_test.exs  index_writer_test.exs  integration_test.exs  native_test.exs  query_parser_test.exs  range_query_test.exs  schema_test.exs  search_integration_test.exs  searcher_test.exs
test/muninn/schema/: field_test.exs
